--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,14 @@
 FROM python:3.11
 
 # set work directory
-WORKDIR /backend
+WORKDIR /backend-image
 
 # install dependencies
-COPY ./requirements.txt .
-RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
+COPY ./requirements.txt /backend-image
+RUN pip install --no-cache-dir --upgrade -r /backend-image/requirements.txt
 
 # copy source root
-COPY . .
+COPY ./ /backend-image
+
+# starting
+CMD ["python", "start.py"]
