--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,13 +4,14 @@
 FROM python:3.11
 
 # set work directory
-WORKDIR /backend-image
-
-# copy source root
-COPY . /backend-image
+WORKDIR /code
 
 # install dependencies
-RUN pip install --no-cache-dir --upgrade -r /backend-image/requirements.txt
+COPY ./requirements.txt /code/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+
+# copy source root
+COPY ./app /code
 
 # starting
 CMD ["python", "start.py"]
