⏱ Additional fixes to backend-test (#37)

--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -54,6 +54,11 @@ jobs:
           cd backend
           poetry install --no-interaction --no-root
 
+      - name: Run API
+        run: |
+          cd backend
+          poetry run start.py
+
       #--------------------------------
       #  -----  run test suite  -----
       #--------------------------------
