⏱ Fixed API start in backend-test (#37)

--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Run API
         run: |
           cd backend
-          poetry run start.py
+          poetry run python start.py
 
       #--------------------------------
       #  -----  run test suite  -----
