--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,7 +21,7 @@ COPY --from=requirements-stage /tmp/requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 # copy source root
-COPY ./app /code/app
+COPY characters_analyzer /code/app
 
 # starting
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
